...
    android:id="@+id/fragment_search"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="80dp">

    <SearchView
        android:id="@+id/search_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:iconifiedByDefault="false"

        android:inputType="textNoSuggestions"
        android:queryHint="search" />

    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"/>
...
